Fixed the buttons in light/dark modes

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -128,7 +128,12 @@ body {
   color: #000;
 }
 
-.light-mode .button {
+.light-mode header #toggleBtn {
+  color: #fff;
+  background: #000;
+}
+
+.light-mode .browse {
   color: #fff;
   background: #000;
 }
@@ -141,6 +146,7 @@ body {
 
 .light-mode #submitBtn {
   background: #000;
+  color: #fff;
 }
 
 /* Inverted colors for h1 and p in light mode */
